# FileExtractor

./: CMakeLists.txt  FileChecker.cpp  FileChecker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
source/: image_source.qrc  logo.rc  qss_source.qrc  readme.txt
source/qss/: style.qss
